# ti-toolbox

./: .gitignore  CHANGELOG.md  README.md  build.ps1  dev.ps1  index.html  package-lock.json  package.json  project.yaml  tsconfig.json  vite.config.ts
.github/workflows/: windows-release.yml
docs/: conversion-rules.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/converter-core/: Cargo.toml
src-tauri/converter-core/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
