[workspace]
members = ["converter-core"]

[package]
name = "ti-toolbox"
version = "0.2.0"
description = "TI MSPM0 工程转换与 Keil 环境配置工具箱"
authors = ["TI Toolbox contributors"]
edition = "2021"

[lib]
name = "ti_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ti-toolbox-core = { path = "converter-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde_json = "1"
